# autoware.universe

./: .aderc  .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy-ignore  .cmakelintrc  .cppcheck_suppressions  .cspell-partial.json  .cspell.json  .editorconfig  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config-optional.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .webauto-ci.yml  .yamllint.yaml  CONTRIBUTING.md  CPPLINT.cfg  NOTICE  README.md  Readme.md  ansible-galaxy-requirements.yaml  autoware.proj.repos  autoware.repos  build_depends.humble.repos  build_depends.repos  build_depends_humble.repos  build_depends_nightly.repos  calibration_tools.repos  checks.json  clang-tidy-required-packages.yaml  codecov.yaml  compile_commands.json  cppcheck_macros.hpp  diag.txt  (+15 more)
autodrive_autoware/control/: CMakeLists.txt  package.xml
autodrive_autoware/control/config/: params.yaml
autodrive_autoware/control/include/: autodrive_trajectory_follower.hpp  controller_node.hpp
autodrive_autoware/control/launch/: autodrive_trajectory_follower.launch.py
autodrive_autoware/control/src/: autodrive_trajectory_follower.cpp  controller_node.cpp
autoware_proj_version/: CMakeLists.txt  package.xml
autoware_proj_version/resource/: version.json
awapi/awapi_awiv_adapter/: CMakeLists.txt  Readme.md  package.xml
awapi/awapi_awiv_adapter/launch/: awapi_awiv_adapter.launch  awapi_awiv_adapter.launch.xml  awapi_relay_container.launch.py
awapi/awapi_awiv_adapter/msg/: AwapiAutowareStatus.msg  AwapiVehicleStatus.msg  LaneChangeStatus.msg  Latlon.msg  ObstacleAvoidanceStatus.msg
awapi/awapi_awiv_adapter/src/: awapi_autoware_state_publisher.cpp  awapi_autoware_util.cpp  awapi_awiv_adapter_core.cpp  awapi_awiv_adapter_node.cpp  awapi_lane_change_state_publisher.cpp  awapi_max_velocity_publisher.cpp  awapi_obstacle_avoidance_state_publisher.cpp  awapi_pacmod_util.cpp  awapi_stop_reason_aggregator.cpp  awapi_v2x_aggregator.cpp  awapi_vehicle_state_publisher.cpp
benchmarking/benchmarking_launch/: CMakeLists.txt  README.md  package.xml
benchmarking/benchmarking_launch/launch/: concat_node.launch.py  perception.launch.xml  pointcloud_container.launch.py  static_transforms.launch.py  waymo.launch.xml  waymo_simulator.launch.xml
benchmarking/benchmarking_launch/rviz/: waymo.rviz
benchmarking/perception_benchmark_tool/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
benchmarking/perception_benchmark_tool/config/: benchmark.param.yaml
benchmarking/perception_benchmark_tool/launch/: benchmark_runner.launch.py  pointcloud_preprocessor.launch.py  waymo_perception.launch.xml
benchmarking/perception_benchmark_tool/perception_benchmark_tool/: autoware_workflow_runner_node.py  benchmark_node.py  perception_benchmark_node.py  tracking_evaluator_node.py  waymo_player_node.py
benchmarking/perception_benchmark_tool/rviz/: waymo.rviz
common/autoware_ad_api_msgs/: CMakeLists.txt  README.md
common/autoware_ad_api_msgs/msg/: ResponseStatus.msg  ResponseStatusDetail.msg
common/autoware_ad_api_msgs/srv/: InterfaceVersion.srv
common/autoware_component_interface_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_component_interface_tools/launch/: service_log_checker.launch.xml
common/autoware_component_interface_tools/src/: service_log_checker.cpp  service_log_checker.hpp
common/autoware_component_interface_tools/test/: test_autoware_component_interface_tools.cpp  test_service_log_checker.cpp
common/autoware_cuda_dependency_meta/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_debug_tools/: CMakeLists.txt  README.md  package.xml
common/autoware_debug_tools/scripts/: case_converter.py  pose2tf.py  self_pose_listener.py  stop_reason2pose.py  stop_reason2tf  tf2pose.py
common/autoware_debug_tools/src/: lateral_error_publisher.cpp
common/autoware_fake_test_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_fake_test_node/design/: fake_test_node-design.md
common/autoware_fake_test_node/src/: fake_test_node.cpp
common/autoware_fake_test_node/test/: test_fake_test_node.cpp
common/autoware_glog_component/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_glog_component/src/: glog_component.cpp
common/autoware_goal_distance_calculator/: CHANGELOG.rst  CMakeLists.txt  Readme.md  package.xml
common/autoware_goal_distance_calculator/launch/: goal_distance_calculator.launch.xml
common/autoware_goal_distance_calculator/src/: goal_distance_calculator.cpp  goal_distance_calculator_node.cpp
common/autoware_pyplot/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_pyplot/src/: axes.cpp  common.cpp  figure.cpp  legend.cpp  patches.cpp  pyplot.cpp  quiver.cpp  text.cpp
common/autoware_pyplot/test/: test_pyplot.cpp
common/autoware_test_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_test_utils/config/: psim_road_shoulder.rviz  sample_topic_snapshot.yaml  test_vehicle_info.param.yaml
common/autoware_test_utils/launch/: psim_intersection.launch.xml  psim_road_shoulder.launch.xml
common/autoware_test_utils/rviz/: psim_intersection.rviz  psim_road_shoulder.rviz  psim_test_map.rviz
common/autoware_test_utils/src/: autoware_test_utils.cpp  mock_data_parser.cpp  topic_snapshot_saver.cpp
common/autoware_test_utils/test/: test_autoware_test_manager.cpp  (+1 more)
common/autoware_traffic_light_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_trajectory/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_type_adapters/: CMakeLists.txt  package.xml
common/autoware_utils/: CMakeLists.txt  package.xml
common/autoware_vehicle_info_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/component_interface_specs/: CMakeLists.txt  package.xml
common/component_interface_tools/: CMakeLists.txt  package.xml
common/cuda/: CMakeLists.txt  README.md  package.xml
common/cuda_api_wrappers/: CMakeLists.txt  package.xml
(+31609 files in other folders)
