<?xml version="1.0"?>
<package format="2">
  <name>awapi_awiv_adapter</name>
  <version>0.1.0</version>
  <description>The awapi_awiv_adapter package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>autoware_api_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
