<?xml version="1.0"?>
<package format="3">
  <name>benchmarking_launch</name>
  <version>0.1.0</version>
  <description>The benchmarking_launch package</description>

  <maintainer email="kcolak@leodrive.ai">Kaan Colak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tier4_sensing_launch</exec_depend>
  <!--  <exec_depend>tier4_vehicle_launch</exec_depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
