<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_benchmark_tool</name>
  <version>0.0.0</version>
  <description>This package benchmark Autoware perception stack on Waymo dataset</description>
  <maintainer email="kcolak@leodrive.ai">Kaan Colak</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>autoware_auto_perception_msgs</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tier4_perception_msgs</exec_depend>
  <exec_depend>python3-waymo-open-dataset-tf-2-6-0-pip</exec_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
