<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_component_interface_tools</name>
  <version>0.41.0</version>
  <description>The autoware_component_interface_tools package</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tier4_system_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>diagnostic_updater</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>tier4_system_msgs</test_depend>
  <test_depend>yaml_cpp_vendor</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
