<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_pyplot</name>
  <version>0.41.0</version>
  <description>C++ interface for matplotlib based on pybind11</description>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <maintainer email="yukinari.hisaki.2@tier4.jp">Yukinari Hisaki</maintainer>
  <license>Apache License 2.0</license>

  <author email="mamoru.sobue@tier4.jp">Mamoru Sobue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>pybind11-dev</depend>
  <depend>python3-dev</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
