<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_trajectory</name>
  <version>0.39.0</version>
  <description>The autoware_trajectory package</description>
  <maintainer email="yukinari.hisaki.2@tier4.jp">Yukinari Hisaki</maintainer>
  <maintainer email="takayuki.murooka@tier4.jp">Takayuki Murooka</maintainer>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <license>Apache License 2.0</license>

  <author email="yukinari.hisaki.2@tier4.jp">Yukinari Hisaki</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tier4_planning_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
