<?xml version="1.0"?>
<package format="2">
  <name>autoware_utils</name>
  <version>0.1.0</version>
  <description>The autoware_utils package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
